Adjust overlay scrollbar reparenting trigger logic

- Determine non-stacked-with-in-flow-stacked descendants scrollers, and use that
information to decide when to reparent overlay scrollbars. Delete old logic.
- Implement this new
bit in the descendant-dependent PaintLayer tree walk. Move the has-self-painting-
layer-descendant bit to that tree walk also.


Overlay scrollbars for an overflow scrolling element need to paint after all
content that scrolls under it. If the element is stacked, this is easy because
we can iterate over all PaintLayers that scroll with it (including the element)
and reparent the overlay scrollbars after that in the GraphicsLayer list of
the parent stacking context.

If the element is not stacked, however, this is trickier, as we should only reparent
if there is a stacked scrolling PaintLayer under the element, because the element
is not painted in the containing stacking context, but instead by its direct ancestor,
which may not be a stacking context.
scrollbars/overlay-scrollbars-within-overflow-scroll.html is a good
example of this, where the inner scroller is not stacked and has no stacked descendant.

Detecting non-stacked with stacking, scrolled descendants allow us to simplify the logic
for determining reparenting triggers, to avoid complicated/potentially slow logic in
CompositingInputsUpdater.

To make room for the new bit, merge the HasSelfPaintingLayerDescendant bit into the
descendant-dependent tree walk. This bit was computed in its own tree walk with
its own dirty bit, which was unnecessarily complicated and slow.


Bug: 857035
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: Idcf8fdf0ab20ca25edc9e5ff33c203efee392dbd
Reviewed-on: https://chromium-review.googlesource.com/1128333
Reviewed-by: Tien-Ren Chen <trchen@chromium.org>
Commit-Queue: Chris Harrelson <chrishtr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#574324}
Former-commit-id: 496307f84f8edf8fd2c11cf3e36854ed77c4632a